--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Refund</title>
+    <title>Sistema de Refund</title>
   </head>
 
   <body>
